Java Code for 4.18.0